--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+
+:root {
+  /*fonts*/
+  --body-font: 'IBM Plex Sans', sans-serif;
+
+  /*colors*/
+  --dark-background-color: #333;
+  --light-background-color: #fff;
+  --light-gray-color:#dfe1e5;
+  --dark-color: #333;
+  --light-color: #fff;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body{
+  font-family: var(--body-font);
+  margin: 0px;
+}
+
