Main structure profile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
 <app-header></app-header>
+<div class="wrapper">
+  <div class="profile-details">
+    <app-profile-picture></app-profile-picture>
+    <app-profile-info></app-profile-info>
+  </div>
+  <div class="profile-map">
+    <app-map></app-map>
+  </div>
+</div>
