--- a/src/app/profile-info/profile-info.component.html
+++ b/src/app/profile-info/profile-info.component.html
@@ -12,20 +12,29 @@
   </div>
   <div class="profile-info-form">
     <div class="mb-3">
-      <label for="username">Username:</label>
+      <label for="username">*Username:</label>
       <input formControlName="username" id="username" type="text" class="form-control">
-      <div *ngIf="form.username.touched && form.username.invalid">
+      <div *ngIf="((form.username.touched && form.username.invalid) || (submitted && form.username.invalid))">
           <small class="text-danger" *ngIf="form.username.errors?.required">Username is required.</small>
       </div>
     </div>
     <div class="mb-3">
-      <label for="email">Email:</label>
+      <label for="email">*Email:</label>
       <input formControlName="email" id="email" type="email" class="form-control">
-      <div *ngIf="form.email.touched && form.email.invalid">
+      <div *ngIf="((form.email.touched && form.email.invalid) || (submitted && form.email.invalid))">
         <small class="text-danger" *ngIf="form.email.errors?.required">Email is required.</small>
         <small class="text-danger" *ngIf="form.email.errors?.pattern">Email is invalid</small>
       </div>
     </div>
+    <div class="mb-3">
+      <label for="gender">Gender:</label>
+      <div>
+        <input id="male" type="radio" value="male" name="gender" formControlName="gender">
+        <label for="male">Male</label>
+        <input class="ms-5" id="female" type="radio" value="female" name="gender" formControlName="gender">
+        <label for="female">Female</label>
+     </div>
+  </div>
     <div class="mb-3">
       <label for="bio" class="form-label">Bio</label>
       <textarea formControlName="bio" id="bio" class="form-control" rows="3"></textarea>
